--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -25,13 +25,15 @@
 
   
 - platform: nmap_tracker
+  home_interval: 3
   hosts: 
     - 192.168.1.72
     - 192.168.1.74
     - 192.168.1.68
-    - 192.168.1.76
     - 192.168.1.111
-    - 192.168.1.73
+    - 192.168.1.110
+    - 192.168.1.100
+
     
 
   
