--- a/groups.yaml
+++ b/groups.yaml
@@ -5,18 +5,15 @@ default_view:
   view: yes
   icon: mdi:home
   entities:
-    - group.temponarua
-    - group.tempoemcasa
+    - group.estacaometeorologica
     - group.sensoresdecasa
     - group.transito
-    - group.plantas
     - group.cameras
-    - group.automacoes
     - group.familia
     - group.radio
     - group.boxs
-
-    
+  
+  
     
   
   
@@ -27,7 +24,6 @@ default_view:
 cameras_transito:
   view: yes
   name: Cameras de Trânsito
-  icon: mdi:camcorder
   entities:
     - camera.ponte_vasco_da_gama_sul
     - camera.ponte_vasco_da_gama_norte
@@ -36,60 +32,33 @@ cameras_transito:
 
 
 
-      
-    
-   
 ################################################
 #           VISTA DISPOSITIVOS NA REDE         #
 ################################################    
 dispositivos_da_rede:
   view: yes
   name: Dispositivos na rede
-  icon: mdi:server-network
   entities:
     - group.dispositivos_na_rede
 
 
-
-
-
-
 dispositivos_na_rede:
-  name: Dispositivos na rede
-  icon: mdi:server-network
   entities:
     - binary_sensor.sonoff_candeiro_sofa
     - binary_sensor.sonoff_plantas_varanda
     - binary_sensor.sonoff_aromatizador
-    - binary_sensor.sonoffledsbancadacozinha
     - binary_sensor.sonoff_Interruptor_Casa_de_Banho
     - binary_sensor.sonoff_radio_Casa_de_Banho
-    - binary_sensor.device_tracker_broadlinkcozinha
+    - binary_sensor.sonoff_interruptor_quarto_bia
     - binary_sensor.sonoff_leds_bancada_cozinha
+    - binary_sensor.sonoff_candeiro_cama_bia
+    - binary_sensor.device_tracker_broadlinkcozinha
     - binary_sensor.device_tracker_broadlinkquartobia
-    - binary_sensor.device_tracker_homecinema
-    - binary_sensor.device_tracker_tvsala
-
-   
-################################################
-#             VISTA VÁRIOS                     #
-################################################
-energiateste:
-  view: yes
-  name: PAINEL DE TESTES
-  icon: mdi:grid
-  entities:
-    - group.energia
-    - group.totalizadores
-    - group.consumos_mensais
-    - group.consumos_diarios
-    - input_boolean.tv_cozinha
-   
+    - binary_sensor.device_tracker_broadlinksala
+    - binary_sensor.device_tracker_tvcozinha
     
-   
-   
 
-#______________________________________________#
+
 
 ################################################
 #             GRUPO FAMÍLIA                    #
@@ -98,8 +67,6 @@ energiateste:
 familia:
   name: Familia
   entities:
-    - input_boolean.box_sala
-    - input_boolean.tv_cozinha
     - switch.computador
     - input_select.opcoespc
     - input_boolean.porta_rua_automatica
@@ -111,13 +78,11 @@ familia:
     - sensor.rodolfo_bateria_tlm
     - sensor.estadopaula
     - sensor.paula_bateria_tlm
-    - camera.rodolfo_cam
-    - camera.paula_cam
+    - camera.rodolfo_localizacao
+    - camera.paula_localizacao
 
-    
- 
-   
- 
+
+
 ################################################
 #         GRUPO SENSORES DE CASA               #
 ################################################  
@@ -128,40 +93,24 @@ sensoresdecasa:
     - input_boolean.porta_rua
     - input_boolean.campainha_rua
     - input_select.hass_theme
-    - light.gateway_light_34ce0091e2e0
-    - switch.candeiro_sofa
-    - switch.radio
-#    - sensor.tvsala
-    - sensor.tvcozinha
-    - switch.leds_bancada_cozinha
-    - switch.luz_casa_de_banho
-    - switch.aromatizador
-#    - sensor.gateway_xiaomi
- 
-    
-    
+  
+
 ################################################
-#             GRUPO TEMPO NA RUA               #
+#             GRUPO ESTAÇAO METEOROLOGICA      #
 ################################################
 
     
-temponarua:
-  name: Ambiente Exterior
+estacaometeorologica:
+  name: Estaçao Meteorológica
   entities:
     - sensor.estadodotempo
     - sensor.dark_sky_temperature
     - sensor.dark_sky_humidity
     - camera.odivelas
-    
-################################################
-#            GRUPO AMBIENTE EM CASA            #
-################################################
-
-tempoemcasa:
-  name: Ambiente Interior
-  entities:
     - sensor.temperatura_em_casa
     - sensor.humidade_em_casa
+    
+
     
 ################################################
 #             GRUPO TRÂNSITO                   #
@@ -182,14 +131,21 @@ cameras:
   entities:
     - camera.porta_escada
     
-################################################
-#             GRUPO AUTOMAÇOES                 #
-################################################
+
     
-automacoes:
-  name: Automações
+################################################
+#             PAINEL PARA TESTES               #
+################################################
+energiateste:
+  view: yes
+  name: PAINEL DE TESTES
   entities:
-    - input_boolean.modoferias
+    - group.energia
+    - group.totalizadores
+    - group.consumos_mensais
+    - group.consumos_diarios
+    - switch.computador
+    - input_select.opcoespc
     
 
 
