--- a/known_devices.yaml
+++ b/known_devices.yaml
@@ -31,97 +31,35 @@ broadlinkcozinha:
   hide_if_away: false
   icon:
   mac: b4:43:0d:f9:1d:03
-  name: Broadlink Cozinha
-  picture:
-  track: true  
-  vendor:
-   
-broadlinkquartobia:
-  hide_if_away: false
-  icon:
-  mac: 34:ea:34:58:8a:2a
-  name: Broadlink Quarto Bia
-  picture:
-  track: true  
-  vendor:
-
-homecinema:
-  hide_if_away: false
-  icon:
-  mac: 0c:84:dc:72:11:55
-  name: Home Cinema
+  name: Broadlink da Cozinha
   picture:
   track: true  
   vendor:
   
-tvsala:
+tvcozinha:
   hide_if_away: false
   icon:
-  mac: e0:ce:c3:22:cb:ae
-  name: Tv Sala
+  mac: ec:fa:bc:8a:ef:77
+  name: NodeMcu Tv Cozinha
   picture:
   track: true  
   vendor:
 
-00a4ed0d2734:
+broadlinksala:
   hide_if_away: false
   icon:
-  mac: 00:A4:ED:0D:27:34
-  name: 00a4ed0d2734
+  mac: 34:ea:34:58:8a:1d
+  name: Broadlink da Sala
   picture:
-  track: true
-  vendor: unknown
+  track: true  
+  vendor:
 
-5cf8a1d93598:
-  hide_if_away: false
-  icon:
-  mac: 5C:F8:A1:D9:35:98
-  name: 5cf8a1d93598
-  picture:
-  track: true
-  vendor: unknown
 
-bumbinha:
+broadlinkquartobia:
   hide_if_away: false
   icon:
-  mac: BT_DC:09:4C:78:EB:EA
-  name: bumbinha
+  mac: 34:ea:34:58:8a:2a
+  name: Broadlink do Quarto Bia
   picture:
-  track: true
-  vendor: HUAWEI TECHNOLOGIES CO.,LTD
-
-beatspillxl:
-  hide_if_away: false
-  icon:
-  mac: BT_04:88:E2:14:27:AB
-  name: BeatsPillXL
-  picture:
-  track: true
-  vendor: Beats Electronics LLC
-
-desktoplcolt03:
-  hide_if_away: false
-  icon:
-  mac: BT_80:A5:89:59:27:84
-  name: DESKTOP-LCOLT03
-  picture:
-  track: true
-  vendor: AzureWave Technology Inc.
-
-nokia_3310:
-  hide_if_away: false
-  icon:
-  mac: BT_90:A3:65:55:9E:9D
-  name: Nokia 3310
-  picture:
-  track: true
-  vendor: HMD Global Oy
-
-rita_gouveia:
-  hide_if_away: false
-  icon:
-  mac: BT_84:11:9E:15:CE:1D
-  name: Rita Gouveia
-  picture:
-  track: true
-  vendor: Samsung Electronics Co.,Ltd
+  track: true  
+  vendor:
