--- a/packages/notificacoes.yaml
+++ b/packages/notificacoes.yaml
@@ -280,7 +280,23 @@ automation:
       - service: input_boolean.turn_off
         data:
           entity_id: input_boolean.tv_cozinha
-           
+          
+# Notifica-me se algum dos meus equipamentos ficaram offline.
+
+  - alias: Notificaçao equipamentos offline
+    initial_state: true
+    trigger:
+      platform: state
+      entity_id: binary_sensor.sonoff_candeiro_sofa, binary_sensor.sonoff_plantas_varanda, binary_sensor.sonoff_aromatizador, binary_sensor.sonoff_Interruptor_Casa_de_Banho, binary_sensor.sonoff_radio_Casa_de_Banho, binary_sensor.sonoff_interruptor_quarto_bia, binary_sensor.sonoff_leds_bancada_cozinha, binary_sensor.sonoff_candeiro_cama_bia, binary_sensor.device_tracker_broadlinkcozinha, binary_sensor.device_tracker_broadlinkquartobia, binary_sensor.device_tracker_broadlinksala, binary_sensor.device_tracker_tvcozinha
+      from: 'on'
+      to: 'off'
+    action:
+    - service: notify.telegram
+      data_template:
+        title: "Home Assistant"
+        message: "{{  trigger.to_state.attributes.friendly_name  }} está desligado"
+        
+        
 
 
 #Informa o Dono da Casa se os artigos da Gearbest que definiu, se os mesmos automentaram de preço ou baixaram.
@@ -393,5 +409,7 @@ notify:
 #    platform: html5
 #    gcm_api_key: !secret gcm_api_key_api
 #    gcm_sender_id: !secret gcm_sender_id_Id
+
+
     
 
