--- a/packages/plantas.yaml
+++ b/packages/plantas.yaml
@@ -45,6 +45,9 @@ switch:
     name: "Regar Plantas Varanda"
     state_topic: "stat/plantas/POWER"
     command_topic: "cmnd/plantas/power"
+    availability_topic: "tele/plantas/LWT"
+    payload_available: "Online"
+    payload_not_available: "Offline"
     qos: 1
     payload_on: "ON"
     payload_off: "OFF"
@@ -63,13 +66,23 @@ binary_sensor:
     value_template: "{{ value }}"
     payload_on: "Online"
     payload_off: "Offline"
+    
+    
 ###############################################################################
 #                                                                             #
 #                           G R O U P S                                       #
 #                                                                             #
 ###############################################################################  
 group:
+
   plantas:
+    view: yes
+    name: PLANTAS
+    entities:
+      - group.plantasgroup
+
+  plantasgroup:
+    control: hidden
     name: Plantas
     entities:
       - switch.regar_plantas_varanda
