--- a/packages/presencas_e_ausencias.yaml
+++ b/packages/presencas_e_ausencias.yaml
@@ -170,11 +170,11 @@ automation:
         data:
           entity_id: input_select.paula_status_dropdown
           option: Apenas Chegou
-      - service: notify.pushnotification
+      - service: notify.telegram
         data:
           title: 'A Paula acabou de chegar à zona de residência'
           message: 'Às {{states.sensor.time.state}}'
-          target: ["MEUPC", "MEU_TELEMOVEL"]
+          #target: ["MEUPC", "MEU_TELEMOVEL"]
 
 #Informa o utilizador que a Paula já se encontra em casa, ou seja ja passaram 10 min desde que ele chegou a zona de residência.
   - alias: Paula esta em Casa
@@ -187,11 +187,11 @@ automation:
         data:
           entity_id: input_select.paula_status_dropdown
           option: Em Casa
-      - service: notify.pushnotification
+      - service: notify.telegram
         data:
           title: 'A Paula está em casa'
           message: 'Desde as {{states.sensor.time.state}}'
-          target: ["MEUPC", "MEU_TELEMOVEL"]
+          #target: ["MEUPC", "MEU_TELEMOVEL"]
 
 #Informa o utilizador que a Paula apenas saiu de Casa, mas que não saiu definitivamente. Exemplo: Foi só ás compras rapido e volta em menos de 10 min.
   - alias: Paula saiu de Casa
@@ -204,11 +204,11 @@ automation:
         data:
           entity_id: input_select.paula_status_dropdown
           option: Apenas Saiu
-      - service: notify.pushnotification
+      - service: notify.telegram
         data:
           title: 'A Paula acabou de sair de casa'
           message: 'Às {{states.sensor.time.state}}'
-          target: ["MEUPC", "MEU_TELEMOVEL"]
+          #target: ["MEUPC", "MEU_TELEMOVEL"]
           
 #Informa o utilizador que a Paula já saiu mesmo de Casa como da zona de residência.
   - alias: Paula está Ausente
@@ -223,11 +223,11 @@ automation:
         data:
           entity_id: input_select.paula_status_dropdown
           option: Ausente
-      - service: notify.pushnotification
+      - service: notify.telegram
         data:
           title: 'A Paula está ausente'
           message: 'Desde as  {{ (now().strftime("%s") | int - 600) | timestamp_custom("%H:%M")}}'
-          target: ["MEUPC", "MEU_TELEMOVEL"]
+          #target: ["MEUPC", "MEU_TELEMOVEL"]
 
 #Informa o utilizador que a Paula não foi a casa durante 24 horas.
   - alias: Paula ausente por mais de 24 horas
@@ -242,11 +242,11 @@ automation:
         data:
           entity_id: input_select.paula_status_dropdown
           option: Ausencia Prolongada
-      - service: notify.pushnotification
+      - service: notify.telegram
         data:
           title: 'A Paula está em ausência prolongada'
           message: 'Desde do dia {{states.sensor.date.state}} às {{states.sensor.time.state}}'
-          target: ["MEUPC", "MEU_TELEMOVEL"]
+          #target: ["MEUPC", "MEU_TELEMOVEL"]
 
 #Informa o utilizador que a Paula acabou de chegar ao Trabalho.
   - alias: Paula acabou de chegar ao trabalho
@@ -263,11 +263,11 @@ automation:
         data:
           entity_id: input_select.paula_status_dropdown
           option: notrabalho
-      - service: notify.pushnotification
+      - service: notify.telegram
         data:
           title: 'A Paula está no trabalho'
           message: 'Desde as {{states.sensor.time.state}}'
-          target: ["MEUPC", "MEU_TELEMOVEL"]
+          #target: ["MEUPC", "MEU_TELEMOVEL"]
 
 #Informa o utilizador que a Paula acabou de sair do Trabalho.
   - alias: Paula acabou de sair do trabalho
@@ -284,11 +284,11 @@ automation:
         data:
           entity_id: input_select.paula_status_dropdown
           option: Ausente
-      - service: notify.pushnotification
+      - service: notify.telegram
         data:
           title: 'A Paula saiu do trabalho'
           message: 'Às {{states.sensor.time.state}}'
-          target: ["MEUPC", "MEU_TELEMOVEL"]
+          #target: ["MEUPC", "MEU_TELEMOVEL"]
 
 
 
